<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>digital.slovensko.autogram</groupId>
    <artifactId>core</artifactId>
    <version>0.9.0</version>
    <packaging>jar</packaging>

    <name>Autogram core</name>
    <description>A Java library to create and validate advanced electronic signatures built on top of Digital Signature Service used in Autogram by Slovensko.Digital</description>
    <url>https://autogram.slovensko.digital</url>

    <licenses>
        <license>
            <name>European Union Public License v. 1.2</name>
            <url>https://eupl.eu/1.2/en/</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Marek Celuch</name>
            <email>marek.celuch@slovensko.digital</email>
            <organization>Slovensko.Digital</organization>
            <organizationUrl>https://github.com/slovensko-digital</organizationUrl>
        </developer>
        <developer>
            <name>Jan Suchal</name>
            <email>jan.suchal@slovensko.digital</email>
            <organization>Slovensko.Digital</organization>
            <organizationUrl>https://github.com/slovensko-digital</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/slovensko-digital/autogram-core.git</connection>
        <developerConnection>scm:git:ssh://github.com:slovensko-digital/autogram-core.git</developerConnection>
        <url>https://github.com/slovensko-digital/autogram-core/tree/main</url>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
        <dss.version>6.0</dss.version>
        <gson.version>2.11.0</gson.version>
        <junit.version>5.10.2</junit.version>
        <slf4j.version>2.0.13</slf4j.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>eu.europa.ec.joinup.sd-dss</groupId>
                <artifactId>dss-bom</artifactId>
                <version>${dss.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-plugin-api</artifactId>
            <version>2.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.plugin-tools</groupId>
            <artifactId>maven-plugin-annotations</artifactId>
            <version>3.4</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.iq80.snappy</groupId>
            <artifactId>snappy</artifactId>
            <version>0.5</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-invoker-plugin</artifactId>
            <version>3.8.1</version>
        </dependency>
        <dependency>
            <groupId>org.codehaus.plexus</groupId>
            <artifactId>plexus-utils</artifactId>
            <version>3.0.24</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>eu.europa.ec.joinup.sd-dss</groupId>
            <artifactId>dss-enumerations</artifactId>
        </dependency>
        <dependency>
            <groupId>eu.europa.ec.joinup.sd-dss</groupId>
            <artifactId>dss-model</artifactId>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>eu.europa.ec.joinup.sd-dss</groupId>
            <artifactId>dss-asic-xades</artifactId>
        </dependency>
        <dependency>
            <groupId>eu.europa.ec.joinup.sd-dss</groupId>
            <artifactId>dss-pades-pdfbox</artifactId>
        </dependency>
        <dependency>
            <groupId>eu.europa.ec.joinup.sd-dss</groupId>
            <artifactId>dss-pdfa</artifactId>
        </dependency>
        <dependency>
            <groupId>eu.europa.ec.joinup.sd-dss</groupId>
            <artifactId>dss-service</artifactId>
        </dependency>
        <dependency>
            <groupId>eu.europa.ec.joinup.sd-dss</groupId>
            <artifactId>dss-asic-cades</artifactId>
        </dependency>
        <dependency>
            <groupId>eu.europa.ec.joinup.sd-dss</groupId>
            <artifactId>dss-tsl-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>eu.europa.ec.joinup.sd-dss</groupId>
            <artifactId>dss-utils-google-guava</artifactId>
        </dependency>
        <dependency>
            <groupId>eu.europa.ec.joinup.sd-dss</groupId>
            <artifactId>dss-token</artifactId>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.igormaznitsa</groupId>
                <artifactId>mvn-jlink-wrapper</artifactId>
                <version>1.2.0</version>
                <executions>
                    <execution>
                        <id>call-jdeps</id>
                        <goals>
                            <goal>jdeps</goal>
                        </goals>
                        <configuration>
                            <!-- The output of jdeps is currently not used anywhere, modules are
                            defined manually -->
                            <skip>true</skip>
                            <output>${project.build.directory}${file.separator}jdeps.out</output>
                            <options>
                                <option>--class-path</option>
                                <option>./target/dependency-jars/*</option>
                                <option>-R</option>
                                <option>--multi-release</option>
                                <option>${java.version}</option>
                                <option>-f</option>
                                <option>.*jar</option>
                                <option>
                                    ${project.build.directory}${file.separator}${project.build.finalName}.jar
                                </option>
                            </options>
                        </configuration>
                    </execution>

                    <execution>
                        <id>call-jlink</id>
                        <goals>
                            <goal>jlink</goal>
                        </goals>
                        <configuration>
                            <output>${project.build.directory}${file.separator}preparedJDK</output>
                            <addModules>
                                <module>java.compiler</module>
                                <module>java.base</module>
                                <module>java.xml</module>
                                <module>java.naming</module>
                                <module>java.datatransfer</module>
                                <module>java.net.http</module>
                                <module>java.scripting</module>
                                <module>jdk.unsupported</module>
                                <module>jdk.httpserver</module>
                            </addModules>
                            <options>
                                <option>--compress=2</option>
                                <option>--no-header-files</option>
                                <option>--no-man-pages</option>
                                <option>--strip-debug</option>
                                <option>--strip-native-commands</option>
                            </options>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>run-its</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-invoker-plugin</artifactId>
                        <version>3.8.1</version>
                        <configuration>
                            <debug>true</debug>
                            <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
                            <pomIncludes>
                                <pomInclude>*/pom.xml</pomInclude>
                            </pomIncludes>
                            <postBuildHookScript>verify</postBuildHookScript>
                            <localRepositoryPath>${project.build.directory}/local-repo</localRepositoryPath>
                            <settingsFile>src/it/settings.xml</settingsFile>
                            <goals>
                                <goal>clean</goal>
                                <goal>test-compile</goal>
                            </goals>
                        </configuration>
                        <executions>
                            <execution>
                                <id>integration-test</id>
                                <goals>
                                    <goal>install</goal>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>

            </build>
        </profile>
    </profiles>
</project>
